tests/rosetta/out/Java/cartesian-product-of-two-or-more-lists-4.error
javac: exit status 1
/tmp/CartesianProductOfTwoOrMoreLists4.java:10: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)String.valueOf(xs.get(i))).doubleValue();
                                           ^
/tmp/CartesianProductOfTwoOrMoreLists4.java:23: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)listStr(lst.get(i))).doubleValue();
                                    ^
/tmp/CartesianProductOfTwoOrMoreLists4.java:51: error: incompatible types: List<Integer> cannot be converted to List<List<Integer>>
            for (List<Integer> x : (List<List<Integer>>)a.get(last)) {
                                                             ^
/tmp/CartesianProductOfTwoOrMoreLists4.java:53: error: incompatible types: List<Integer> cannot be converted to Integer
                row.add(x);
                        ^
Note: /tmp/CartesianProductOfTwoOrMoreLists4.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
